Fixed add courses form label size to match input box

--- a/app/templates/_formhelpers.html
+++ b/app/templates/_formhelpers.html
@@ -1,3 +1,4 @@
+<!--Template to render form field-->
 {% macro render_field(field) %}
 <div class="common-page-form-field">
     <b>{{ field.label }}</b>
